// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<card-component> applies elevation and custom classes to the article element 1`] = `
<card-component class-names="custom-card" elevation="2">
  <!---->
  <article class="card custom-card elevated-2" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-8-lmrj-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> heading-level attribute changes the title heading tag 1`] = `
<card-component heading-level="2">
  <!---->
  <article class="card" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h2 class="card-title" id="card-9-r1hl-title">
        <div slot="title">
          Card Title
        </div>
      </h2>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> noHeader/noFooter remove their wrappers entirely 1`] = `
<card-component no-footer="" no-header="">
  <!---->
  <article class="card" style="max-width: 20rem;">
    <div class="card-body">
      <h5 class="card-title" id="card-12-0ioq-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
  </article>
</card-component>
`;

exports[`<card-component> renders actions wrapper only when actions=true 1`] = `
<card-component actions="">
  <!---->
  <article class="card" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-7-h0ya-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-actions">
      <div slot="actions">
        Action Button
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> renders basic card (non-landmark, non-clickable) with no role by default 1`] = `
<card-component>
  <!---->
  <article class="card" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-1-icmu-title"></h5>
      <div class="card-text"></div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> renders card with header and footer slots (wrapper elements always present unless noHeader/noFooter) 1`] = `
<card-component>
  <!---->
  <article class="card" style="max-width: 20rem;">
    <div class="card-header">
      <div slot="header">
        Header Content
      </div>
    </div>
    <div class="card-body">
      <h5 class="card-title" id="card-4-z3cg-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Main text content
        </div>
      </div>
    </div>
    <div class="card-footer">
      <div slot="footer">
        Footer Content
      </div>
    </div>
  </article>
</card-component>
`;

exports[`<card-component> renders card with image (non-decorative) and preserves alt text 1`] = `
<card-component alt-text="Sample Image" img="" img-src="https://example.com/image.jpg">
  <!---->
  <article class="card" style="max-width: 20rem;">
    <img alt="Sample Image" class="card-img-top" src="https://example.com/image.jpg" style="height: 11.25rem; width: 100%; display: block;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-5-w9dq-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> renders decorative image with alt="" and aria-hidden="true" 1`] = `
<card-component alt-text="Ignored" decorative-image="" img="" img-src="https://example.com/image.jpg">
  <!---->
  <article class="card" style="max-width: 20rem;">
    <img alt="" aria-hidden="true" class="card-img-top" src="https://example.com/image.jpg" style="height: 11.25rem; width: 100%; display: block;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-6-o5c6-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> renders landmark region with aria-label when landmark=true and aria-label is provided 1`] = `
<card-component aria-label="Profile Card" landmark="">
  <!---->
  <article aria-label="Profile Card" class="card" role="region" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-2-fp3y-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;

exports[`<card-component> renders landmark region with aria-labelledby when provided (preferred over aria-label) 1`] = `
<card-component aria-label="Ignored Label" aria-labelledby="ext-label" landmark="">
  <!---->
  <article aria-labelledby="ext-label" class="card" role="region" style="max-width: 20rem;">
    <div class="card-header"></div>
    <div class="card-body">
      <h5 class="card-title" id="card-3-3vu7-title">
        <div slot="title">
          Card Title
        </div>
      </h5>
      <div class="card-text">
        <div slot="text">
          Text
        </div>
      </div>
    </div>
    <div class="card-footer"></div>
  </article>
</card-component>
`;
